src/FilterLocking/Components/ConditionList/ConditionList.css
.autoql-vanilla-condition-list{
    padding: 6px !important;
    margin: 0 auto;
    min-height: 182px;
}

.autoql-vanilla-empty-condition-list{
    text-align: center;
    padding: 20px !important;
    height: 140px !important;
    font-family: var(--autoql-vanilla-font-family);
    font-size: 13px;
}

.autoql-vanilla-empty-condition-list p {
    margin-top: 20px!important;
    vertical-align: middle;
    color: var(--autoql-vanilla-text-color-primary);
}

